# FAIR-checker

./: .gitignore  .travis.yml  AUTHORS.md  Dockerfile  LICENSE  README.md  app.py  bioschemas_scrapping_urls.ipynb  biotools-sparql.alive.sh  cli.py  config.py  demo-fairchecker.conf  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  domains.csv  environment.yml  fc_code_formatting.sh  fc_test.sh  fm_demo.md  generics_prog.py  input_urls.txt  launch.sh  launch_code_quality_check.sh  launch_dev.sh  launch_mongo.sh  launch_prod.sh  launch_supervisor.sh  months.csv  nginx-fairchecker.conf  notes_deploy  profile_recomender.py  profile_recommender.py  pyproject.toml  requirements.txt  server.crt  server.csr  server.key  startFAIRChecker.sh  stress_test.py  (+6 more)
binder/: environment.yml
data/: usage_stats.json
docs/: conf.py  index.rst
dumps/: 01166293-97f7-404e-97e5-d1442d944b38.nq  014ad273-7c2b-445a-bb96-70869de400fe.ttl  23838dac-adfe-4aeb-b7c7-97699d2dcb0f.nq  d9d7f1c6-7b74-462f-947e-eed4ef16427f.nq  http:$$bio.tools$bwa$d20ee7c5-e0ab-43e2-bf05-5cd75bdbf677.ttl  https:$$bio.tools$FAIR_Search_Engine$97b08b24-a36e-410d-bc6b-ff1276fea238.ttl  scrapped_dump.ttl
experiments/: Check if improvements in stored evaluations.ipynb  Readme.md  biotools_experimental_sudy-bioschemas.ipynb  biotools_experimental_sudy-by_split.ipynb  dryad_expe_data_study.ipynb  pangaea_expe_data_study.ipynb  split_0.ttl  split_10.ttl  split_11.ttl  split_12.ttl  split_17.ttl  split_18.ttl  split_20.ttl  split_25.ttl  split_4.ttl  split_5.ttl  split_6.ttl  split_7.ttl  split_9.ttl  zenodo_expe_data_study.ipynb  zenodo_expe_pub_study.ipynb  zenodo_expe_software_study.ipynb
metadata_dump/: http:__bio.tools_bwa_95bcd6a5-695f-4910-97fc-cefd5d66c084.ttl
metrics/: A11_Impl.py  A12_Impl.py  AbstractFAIRMetrics.py  Evaluation.py  F1A_Impl.py  (+32 more)
(+11150 files in other folders)
