[tool.poetry]
name = "fair-checker"
version = "0.1.0"
description = ""
authors = ["Alban Gaignard <alban.gaignard@univ-nantes.fr>", "Thomas Rosnet <thomas.rosnet@france-bioinformatique.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7 <3.9"
python-engineio = ">4"
flask = "^2.0.1"
eventlet= "0.30.2"
flask-socketio="4.3.0"
rdflib = "^5.0"
rdflib-jsonld = "*"
pyshacl = "0.11.5"
extruct = "0.12.0"
termcolor = "1.1.0"
sparqlwrapper = "1.8.2"
requests = "2.22.0"
pymongo = "^3.11.4"
black = "^21.6b0"
supervisor = "^4.2.2"
validators = "^0.18.2"
selenium = "^3.141.0"
nose2 = "^0.10.0"
tqdm = "^4.61.1"
rich = "^10.6"
flake8 = "^3.9"
pytest = "^6.2"
pytest-cov = "^2.12"
webdriver_manager = "^3.4"
sphinx = "^4.1"
python-dotenv = "0.18.0"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
